--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <form>
       <!-- Hidden Required Fields -->
       <input type="hidden" name="project_name" value="Название сайта" />
+      <input type="hidden" name="email_sender" value="info@mail.ru" />
       <input type="hidden" name="admin_email" value="admin@mail.ru" />
       <input type="hidden" name="form_subject" value="Тема письма" />
       <!-- END Hidden Required Fields -->
